Added exception dialogs. New GUI functionality.

--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="src/controlsfx-8.40.14.jar"/>
+	<classpathentry kind="lib" path="src/controlsfx-samples-8.40.14.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
